--- a/about.qmd
+++ b/about.qmd
@@ -1,19 +1,18 @@
 ---
-title: "About"
-image: profile.jpg
+title: "Sobre Mim"
+image: foto.jpg
 about:
   template: jolla
   links:
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com
     - icon: linkedin
       text: LinkedIn
-      href: https://linkedin.com
+      href: www.linkedin.com/in/natabackdev
     - icon: github
       text: Github
-      href: https://github.com
+      href: https://github.com/NataHenrique
 
 ---
 
-About this blog
+Sou Natã Henrique, desenvolvedor apaixonado por tecnologia, jogos e programação. Técnico em Informática e estudante de Engenharia da Computação (2º semestre), utilizo este blog para compartilhar minha evolução, estudos e projetos nas áreas de Back-End, Unity, Python, PHP, MySQL, JavaScript e outras tecnologias que fazem parte do meu dia a dia.
+
+Aqui publico conteúdos práticos, tutoriais, análises e anotações que considero úteis tanto para quem está iniciando quanto para quem busca se aprofundar. Meu objetivo é contribuir para a comunidade, aprender continuamente e registrar minha própria jornada no mundo da tecnologia.
